# taskpilot

./: .gitignore  CMakeLists.txt  README.md  io.github.ericfrost.taskpilot.desktop  io.github.ericfrost.taskpilot.metainfo.xml  org.kde.taskpilot.desktop  org.kde.taskpilot.metainfo.xml
src/: CMakeLists.txt  fetchers.cpp  fetchers.h  journaltab.cpp  journaltab.h  main.cpp  mainwindow.cpp  mainwindow.h  taskpilotui.rc
src/auth/: io.github.ericfrost.taskpilot.actions  org.kde.taskpilot.actions  taskpilot_auth.cpp  taskpilot_auth.h
src/editors/: autostartedit.cpp  autostartedit.h  bindlnedit.cpp  bindlnedit.h  cronedit.cpp  cronedit.h  unitcreator.cpp  unitcreator.h
src/services/: servicemodel.cpp  servicemodel.h  servicestab.cpp  servicestab.h  unitactions.cpp  unitactions.h
src/systemd/: systemdmanager.cpp  systemdmanager.h
src/util/: auth.cpp  auth.h  commandtab.cpp  commandtab.h  dialogs.cpp  dialogs.h  dockerps.h  icons.h  proc.h  rowtablemodel.cpp  rowtablemodel.h
